pet module: insert and find all is ready to test

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.5.5'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
+
 }
 
 test {
